initial start of project - text in place and images uploaded

--- a/index.html
+++ b/index.html
@@ -5,45 +5,54 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-    <link rel="stylesheet" href="style.css">
-    <title>Document</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/hover.css/2.3.1/css/hover-min.css">
+    <link rel="stylesheet" href="assets/css/style.css">
+    <title>Ed Sheeran</title>
 </head>
 
 <body>
     <header>
 
+        <div class="container-fluid">
+            <div class="row">
+                <div class="col logo">
+                    Logo Here
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-md-3 col-sm-6 colour3">
+                    nav link 1
+                </div>
+                <div class="col-md-3 col-sm-6 colour2">
+                    nav link 2
+                </div>
+                <div class="col-md-3 col-sm-6 colour3">
+                    nav link 3
+                </div>
+                <div class="col-md-3 col-sm-6 colour2">
+                    nav link 4
+                </div>
+            </div>
+        </div>
     </header>
     <section>
         <div class="container-fluid">
             <div class="row">
-                <div class="col-12 col-sm-6 col-md-3 logo">
-                    text
+                <div class="col-md-3 heading">
+                    sub-title here
                 </div>
-                <div class="col-12 col-sm-6 col-md-9 heading">
-                    text
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-12 col-sm-6 col-md-3 navigation">
-                        <div class="row">
-                            <div class="col-md-12 colour1" >
-                                item 1
-                            </div>
-                            <div class="col-md-12 colour2">
-                                item 2
-                            </div>
-                            <div class="col-md-12 colour3">
-                                item 3
-                            </div>
-                        </div>
-                </div>
-                <div class="col-12 col-sm-6 col-md-9 information">
-                        text
+                <div class="col-md-9 colour1">
+                    images here
                 </div>
             </div>
+        </div>
     </section>
     <footer>
-        this is footer
+<div class="row">
+    <div class="col colour2">Social Links</div>
+</div>
     </footer>
 </body>
 
