updated footer links

--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/hover.css/2.3.1/css/hover-min.css">
     <link rel="stylesheet" href="assets/css/style.css">
     <title>Ed Sheeran</title>
@@ -14,25 +13,29 @@
 
 <body>
     <header>
-
         <div class="container-fluid">
             <div class="row">
-                <div class="col logo">
-                    Logo Here
-                </div>
+                <a href="index.html" class="col logo">
+                </a>
             </div>
             <div class="row">
-                <div class="col-md-3 col-sm-6 colour3">
+                <div class="col-md-2 d-none d-md-block colour3">
+                    black space
+                </div>
+                <div class="col-md-2 col-sm-6 colour2">
                     nav link 1
                 </div>
-                <div class="col-md-3 col-sm-6 colour2">
+                <div class="col-md-2 col-sm-6 colour3">
                     nav link 2
                 </div>
-                <div class="col-md-3 col-sm-6 colour3">
+                <div class="col-md-2 col-sm-6 colour2">
                     nav link 3
                 </div>
-                <div class="col-md-3 col-sm-6 colour2">
+                <div class="col-md-2 col-sm-6 colour3">
                     nav link 4
+                </div>
+                <div class="col-md-2 d-none d-md-block colour2">
+                    black space
                 </div>
             </div>
         </div>
@@ -50,9 +53,51 @@
         </div>
     </section>
     <footer>
-<div class="row">
-    <div class="col colour2">Social Links</div>
-</div>
+        <div class="row">
+            <div class="col colour2">
+                <div class="col-sm-4">
+                    <h2>Social</h2>
+                    <ul class="list-inline">
+                        <li class="list-inline-item">
+                            <a target="_blank" href="#">
+                                <i class="fab fa-facebook-f" aria-hidden="true"></i>
+                                <span class="sr-only">Facebook</span>
+                            </a>
+                        </li>
+                        <li class="list-inline-item">
+                            <a target="_blank" href="https://www.instagram.com/teddysphotos/">
+                                <i class="fab fa-instagram" aria-hidden="true"></i>
+                                <span class="sr-only">Instagram</span>
+                            </a>
+                        </li>
+                        <li class="list-inline-item">
+                            <a target="_blank" href="https://twitter.com/edsheeran">
+                                <i class="fab fa-twitter" aria-hidden="true"></i>
+                                <span class="sr-only">Twitter</span>
+                            </a>
+                        </li>
+                        <li class="list-inline-item">
+                            <a target="_blank" href="https://open.spotify.com/artist/6eUKZXaKkcviH0Ku9w2n3V">
+                                <i class="fab fa-spotify" aria-hidden="true"></i>
+                                <span class="sr-only">Spotify</span>
+                            </a>
+                        </li>
+                        <li class="list-inline-item">
+                            <a target="_blank" href="https://music.apple.com/gb/artist/ed-sheeran/183313439">
+                                <i class="fab fa-apple" aria-hidden="true"></i>
+                                <span class="sr-only">Apple Store</span>
+                            </a>
+                        </li>
+                        <li class="list-inline-item">
+                            <a target="_blank" href="https://www.youtube.com/user/EdSheeran">
+                                <i class="fab fa-youtube" aria-hidden="true"></i>
+                                <span class="sr-only">Youtube</span>
+                            </a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </div>
     </footer>
 </body>
 
