navbar and footer complete

--- a/index.html
+++ b/index.html
@@ -13,91 +13,79 @@
 
 <body>
     <header>
-        <div class="container-fluid">
+        <div class="container-fluid no-gutters section-padding">
             <div class="row">
                 <a href="index.html" class="col logo">
                 </a>
             </div>
-            <div class="row">
-                <div class="col-md-2 d-none d-md-block colour3">
-                    black space
+            <div class="row navigation font-white font-navigation">
+                <div class="col-md-2 d-none d-md-block bg-black">
                 </div>
-                <div class="col-md-2 col-sm-6 colour2">
-                    nav link 1
-                </div>
-                <div class="col-md-2 col-sm-6 colour3">
-                    nav link 2
-                </div>
-                <div class="col-md-2 col-sm-6 colour2">
-                    nav link 3
-                </div>
-                <div class="col-md-2 col-sm-6 colour3">
-                    nav link 4
-                </div>
-                <div class="col-md-2 d-none d-md-block colour2">
-                    black space
+                <a href="index.html" class="col-md-2 col-sm-6 bg-black hover-glow">
+                    <i class="fas fa-home space"></i> Home
+                </a>
+                <a href="music" class="col-md-2 col-sm-6 bg-black hover-glow">
+                    <i class="fas fa-music space"></i> Music + Videos
+                </a>
+                <a href="https://www.ticketmaster.co.uk/ed-sheeran-tickets/artist/1560779" class="col-md-2 col-sm-6 bg-black hover-glow">
+                    <i class="fas fa-ticket-alt space"></i> Book Tickets
+                </a>
+                <a href="contact" class="col-md-2 col-sm-6 bg-black hover-glow">
+                    <i class="fas fa-comments space"></i> Contact Us
+                </a>
+                <div class="col-md-2 d-none d-md-block bg-black">
                 </div>
             </div>
         </div>
     </header>
     <section>
-        <div class="container-fluid">
+        <div class="container-fluid no-gutters section-padding">
             <div class="row">
-                <div class="col-md-3 heading">
+                <div class="col-md-3 bg-grey font-heading">
                     sub-title here
                 </div>
-                <div class="col-md-9 colour1">
+                <div class="col-md-9 bg-white font-text">
                     images here
                 </div>
             </div>
         </div>
     </section>
     <footer>
-        <div class="row">
-            <div class="col colour2">
-                <div class="col-sm-4">
-                    <h2>Social</h2>
-                    <ul class="list-inline">
-                        <li class="list-inline-item">
-                            <a target="_blank" href="#">
-                                <i class="fab fa-facebook-f" aria-hidden="true"></i>
-                                <span class="sr-only">Facebook</span>
-                            </a>
-                        </li>
-                        <li class="list-inline-item">
-                            <a target="_blank" href="https://www.instagram.com/teddysphotos/">
-                                <i class="fab fa-instagram" aria-hidden="true"></i>
-                                <span class="sr-only">Instagram</span>
-                            </a>
-                        </li>
-                        <li class="list-inline-item">
-                            <a target="_blank" href="https://twitter.com/edsheeran">
-                                <i class="fab fa-twitter" aria-hidden="true"></i>
-                                <span class="sr-only">Twitter</span>
-                            </a>
-                        </li>
-                        <li class="list-inline-item">
-                            <a target="_blank" href="https://open.spotify.com/artist/6eUKZXaKkcviH0Ku9w2n3V">
-                                <i class="fab fa-spotify" aria-hidden="true"></i>
-                                <span class="sr-only">Spotify</span>
-                            </a>
-                        </li>
-                        <li class="list-inline-item">
-                            <a target="_blank" href="https://music.apple.com/gb/artist/ed-sheeran/183313439">
-                                <i class="fab fa-apple" aria-hidden="true"></i>
-                                <span class="sr-only">Apple Store</span>
-                            </a>
-                        </li>
-                        <li class="list-inline-item">
-                            <a target="_blank" href="https://www.youtube.com/user/EdSheeran">
-                                <i class="fab fa-youtube" aria-hidden="true"></i>
-                                <span class="sr-only">Youtube</span>
-                            </a>
-                        </li>
-                    </ul>
+        <div class="container-fluid no-gutters section-padding">
+            <div class="row social-media bg-black font-white font-heading">
+                    <div class="col-md-3 d-none d-md-block bg-black">
+                    </div>
+                    <a class="col-md-1 hover-glow" target="_blank"
+                        href="https://www.facebook.com/pages/Ed-Sheeran/9189674485">
+                        <i class="fab fa-facebook-f" aria-hidden="true"></i>
+                        <span class="sr-only">Facebook</span>
+                    </a>
+                    <a class="col-md-1 hover-glow" target="_blank" href="https://www.instagram.com/teddysphotos/">
+                        <i class="fab fa-instagram" aria-hidden="true"></i>
+                        <span class="sr-only">Instagram</span>
+                    </a>
+                    <a class="col-md-1 hover-glow" target="_blank" href="https://twitter.com/edsheeran">
+                        <i class="fab fa-twitter" aria-hidden="true"></i>
+                        <span class="sr-only">Twitter</span>
+                    </a>
+                    <a class="col-md-1 hover-glow target="_blank"
+                        href="https://open.spotify.com/artist/6eUKZXaKkcviH0Ku9w2n3V">
+                        <i class="fab fa-spotify" aria-hidden="true"></i>
+                        <span class="sr-only">Spotify</span>
+                    </a>
+                    <a class="col-md-1 hover-glow" target="_blank"
+                        href="https://music.apple.com/gb/artist/ed-sheeran/183313439">
+                        <i class="fab fa-apple" aria-hidden="true"></i>
+                        <span class="sr-only">Apple Store</span>
+                    </a>
+                    <a class="col-md-1 hover-glow" target="_blank" href="https://www.youtube.com/user/EdSheeran">
+                        <i class="fab fa-youtube" aria-hidden="true"></i>
+                        <span class="sr-only">Youtube</span>
+                    </a>
+                    <div class="col-md-3 d-none d-md-block bg-black">
+                    </div>
                 </div>
             </div>
-        </div>
     </footer>
 </body>
 
