created 2 more pages

--- a/music.html
+++ b/music.html
@@ -59,7 +59,7 @@
             <div class="row">
                 <!-- subheading which is on left side of the page, on small screen will take whole page width -->
                 <div class="col-md-2 col-12 bg-grey">
-                    <h1 class="font-subheading font-black">Home</h1>
+                    <h1 class="font-subheading font-black">Music + Videos</h1>
                 </div>
                 <!-- main body which is on right side of the subheading, on small screen will take whole page width -->
                 <div class="col-md-10 col-12 bg-white">
