--- a/contact.html
+++ b/contact.html
@@ -20,7 +20,7 @@
                 <div class="col-1 bg-black">
                 </div>
                 <!-- logo that links to home page -->
-                <a href="index.html" class="col-10 logo">
+                <a href="index.html" alt="Ed Sheeran" class="col-10 logo">
                 </a>
                 <!-- black space on right of logo -->
                 <div class="col-1 bg-black">
@@ -34,7 +34,7 @@
                 <!-- navigation buttons with font-awesome icons, reduces from horizontal to vertical alignment when screen gets smaller -->
                 <!-- each hyperlink has a hover-effect through the main css stylesheet, that will glow orange when hovered over -->
                 <a href="index.html" class="col-md-2 col-sm-6 bg-black hover-glow">
-                    <i class="fas fa-home space"></i> Home
+                    <i class="fas fa-home space"></i> Home Page
                 </a>
                 <a href="music.html" class="col-md-2 col-sm-6 bg-black hover-glow">
                     <i class="fas fa-music space"></i> Music + Videos
