--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css">
     <link rel="stylesheet" href="assets/css/style.css">
+    <!-- the below script is for the bootstrap carousel pictures at bottom of page -->
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
     <title>Ed Sheeran</title>
 </head>
 
@@ -20,7 +24,7 @@
                 <div class="col-1 bg-black">
                 </div>
                 <!-- logo that links to home page -->
-                <a href="index.html" class="col-10 logo">
+                <a href="index.html" alt="Ed Sheeran" class="col-10 logo">
                 </a>
                 <!-- black space on right of logo -->
                 <div class="col-1 bg-black">
@@ -34,7 +38,7 @@
                 <!-- navigation buttons with font-awesome icons, reduces from horizontal to vertical alignment when screen gets smaller -->
                 <!-- each hyperlink has a hover-effect through the main css stylesheet, that will glow orange when hovered over -->
                 <a href="index.html" class="col-md-2 col-sm-6 bg-black hover-glow">
-                    <i class="fas fa-home space"></i> Home
+                    <i class="fas fa-home space"></i> Home Page
                 </a>
                 <a href="music.html" class="col-md-2 col-sm-6 bg-black hover-glow">
                     <i class="fas fa-music space"></i> Music + Videos
@@ -59,7 +63,7 @@
             <div class="row">
                 <!-- subheading which is on left side of the page, on small screen will take whole page width -->
                 <div class="col-md-2 col-12 bg-grey">
-                    <h1 class="font-subheading font-black">Home</h1>
+                    <h1 class="font-subheading font-black">Home Page</h1>
                 </div>
                 <!-- main body which is on right side of the subheading, on small screen will take whole page width -->
                 <div class="col-md-10 col-12 bg-white">
@@ -67,6 +71,50 @@
                 </div>
             </div>
         </div>
+        <!-- this part below contains photos.  On a large screen shows carousel effect, on smaller shows as -->
+  <div class="row">
+      <div class="col-md-8 photos">
+
+        <div id="PhotoControls" class="carousel slide" data-ride="carousel">
+  <div class="carousel-inner">
+    <div class="carousel-item active">
+      <img class="d-block w-100" src="assets/images/1.jpg" alt="First slide">
+    </div>
+    <div class="carousel-item">
+      <img class="d-block w-100" src="assets/images/2.jpg" alt="Second slide">
+    </div>
+    <div class="carousel-item">
+      <img class="d-block w-100" src="assets/images/3.jpg" alt="Third slide">
+    </div>
+    <div class="carousel-item">
+      <img class="d-block w-100" src="assets/images/4.jpg" alt="Third slide">
+    </div>
+    <div class="carousel-item">
+      <img class="d-block w-100" src="assets/images/5.jpg" alt="Third slide">
+    </div>
+    <div class="carousel-item">
+      <img class="d-block w-100" src="assets/images/6.jpg" alt="Third slide">
+    </div>
+    <div class="carousel-item">
+      <img class="d-block w-100" src="assets/images/7.jpg" alt="Third slide">
+    </div>
+    <div class="carousel-item">
+      <img class="d-block w-100" src="assets/images/8.jpg" alt="Third slide">
+    </div>
+  </div>
+  <a class="carousel-control-prev" href="#PhotoControls" role="button" data-slide="prev">
+    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+    <span class="sr-only">Previous</span>
+  </a>
+  <a class="carousel-control-next" href="#PhotoControls" role="button" data-slide="next">
+    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+    <span class="sr-only">Next</span>
+  </a>
+</div>
+</div>
+</div>
+
+  
     </section>
     <footer>
         <!-- this part contains all the social media links, with a grey top and bottom border -->
