--- a/music.html
+++ b/music.html
@@ -20,7 +20,7 @@
                 <div class="col-1 bg-black">
                 </div>
                 <!-- logo that links to home page -->
-                <a href="index.html" class="col-10 logo">
+                <a href="index.html" alt="Ed Sheeran" class="col-10 logo">
                 </a>
                 <!-- black space on right of logo -->
                 <div class="col-1 bg-black">
@@ -34,7 +34,7 @@
                 <!-- navigation buttons with font-awesome icons, reduces from horizontal to vertical alignment when screen gets smaller -->
                 <!-- each hyperlink has a hover-effect through the main css stylesheet, that will glow orange when hovered over -->
                 <a href="index.html" class="col-md-2 col-sm-6 bg-black hover-glow">
-                    <i class="fas fa-home space"></i> Home
+                    <i class="fas fa-home space"></i> Home Page
                 </a>
                 <a href="music.html" class="col-md-2 col-sm-6 bg-black hover-glow">
                     <i class="fas fa-music space"></i> Music + Videos
@@ -63,6 +63,27 @@
                 </div>
                 <!-- main body which is on right side of the subheading, on small screen will take whole page width -->
                 <div class="col-md-10 col-12 bg-white">
+                    <!-- first music song -->
+                    <div class="container-fluid no-gutters">
+                        <div class="row">
+                            <div class="col-12">
+                                <h6>Ed Sheeran</h6>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-12">
+                                <h4>The A Team</h4>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-12">
+                                <audio controls>
+                                    <source src="assets/music/a-team.mp3" type="audio/mp3">
+                                    Your browser does not support playing MP3s on this website
+                                </audio>
+                            </div>
+                        </div>
+                    </div>
                     <p class="font-black font-text">text here</p>
                 </div>
             </div>
