cropped pictures, and adjusted layout on index page

--- a/music.html
+++ b/music.html
@@ -7,7 +7,9 @@
     <!-- imported bootstrap 4, font-awesome 5, and individual stylesheet -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css">
+    <link rel="stylesheet" href="https://cdn.plyr.io/3.6.3/plyr.css" />
     <link rel="stylesheet" href="assets/css/style.css">
+    <script src="https://cdn.plyr.io/3.6.3/plyr.js"></script>
     <title>Ed Sheeran</title>
 </head>
 
@@ -82,6 +84,12 @@
                                     Your browser does not support playing MP3s on this website
                                 </audio>
                             </div>
+                        </div>
+                        <div class="row">
+                            <audio class="col-12" id="player" controls>
+                                <source src="assets/music/a-team.mp3" type="audio/mp3" />
+                                <source src="assets/music/lego-house.mp3" type="audio/ogg" />
+                            </audio>
                         </div>
                     </div>
                     <p class="font-black font-text">text here</p>
