--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css">
     <link rel="stylesheet" href="assets/css/style.css">
     <!-- the below script is for the bootstrap carousel pictures at bottom of page -->
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
     <title>Ed Sheeran</title>
 </head>
 
@@ -33,88 +33,90 @@
             <!-- navigation bar starts here -->
             <div class="row navigation font-white font-navigation">
                 <!-- black space on left of navigation bar which hides when the screen gets smaller -->
-                <div class="col-md-2 d-none d-md-block bg-black">
+                <div class="col-lg-2 d-none d-lg-block bg-black">
                 </div>
                 <!-- navigation buttons with font-awesome icons, reduces from horizontal to vertical alignment when screen gets smaller -->
                 <!-- each hyperlink has a hover-effect through the main css stylesheet, that will glow orange when hovered over -->
-                <a href="index.html" class="col-md-2 col-sm-6 bg-black hover-glow">
+                <a href="index.html" class="col-lg-2 col-md-3 col-sm-6 col-12 bg-black hover-glow">
                     <i class="fas fa-home space"></i> Home Page
                 </a>
-                <a href="music.html" class="col-md-2 col-sm-6 bg-black hover-glow">
+                <a href="music.html" class="col-lg-2 col-md-3 col-sm-6 col-12 bg-black hover-glow">
                     <i class="fas fa-music space"></i> Music + Videos
                 </a>
                 <!-- external hyperlink that will open the official booking page, in a new tab -->
                 <a href="https://www.ticketmaster.co.uk/ed-sheeran-tickets/artist/1560779" target="_blank"
-                    class="col-md-2 col-sm-6 bg-black hover-glow">
+                    class="col-lg-2 col-md-3 col-sm-6 col-12 bg-black hover-glow">
                     <i class="fas fa-ticket-alt space"></i> Book Tickets
                 </a>
-                <a href="contact.html" class="col-md-2 col-sm-6 bg-black hover-glow">
+                <a href="contact.html" class="col-lg-2 col-md-3 col-sm-6 col-12 bg-black hover-glow">
                     <i class="fas fa-comments space"></i> Contact Us
                 </a>
                 <!-- black space on right of navigation bar which hides when the screen gets smaller -->
-                <div class="col-md-2 d-none d-md-block bg-black">
+                <div class="col-md-2 d-none d-lrg-block bg-black">
                 </div>
             </div>
         </div>
     </header>
     <section>
-        <!-- this part below contains the subheading text, and main body area -->
+        <!-- this part below contains the subheading text, main body area, and photo section -->
         <div class="container-fluid no-gutters">
             <div class="row">
-                <!-- subheading which is on left side of the page, on small screen will take whole page width -->
-                <div class="col-md-2 col-12 bg-grey">
-                    <h1 class="font-subheading font-black">Home Page</h1>
+                <!-- this is the left column that is divided into two rows -->
+                <div class="col-md-4 col-sm-6 col-12">
+                    <div class="row">
+                        <!-- this is the subheading of left column (top row) -->
+                        <div class="col bg-grey">
+                            <h1 class="font-subheading font-black">About Ed Sheeran</h1>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <!-- this is the main body text of left column (bottom row) -->
+                        <div class="col bg-white">
+                            <p class="font-black font-text">Information about Ed Sheeran goes here</p>
+                        </div>
+                    </div>
                 </div>
-                <!-- main body which is on right side of the subheading, on small screen will take whole page width -->
-                <div class="col-md-10 col-12 bg-white">
-                    <p class="font-black font-text">text here</p>
+                <!-- this is the right column below, that contains photos.  On a small screen the photos take up full width of screen -->
+                <div id="photos" class="carousel slide col-md-8 col-sm-6 col-12" data-ride="carousel">
+                    <div class="carousel-inner">
+                        <!-- this is the first image, which is active -->
+                        <div class="carousel-item active">
+                            <img class="d-block w-100" src="assets/images/1.jpg" alt="1st Picture of Ed Sheeran">
+                        </div>
+                        <div class="carousel-item">
+                            <img class="d-block w-100" src="assets/images/2.jpg" alt="2nd Picture of Ed Sheeran">
+                        </div>
+                        <div class="carousel-item">
+                            <img class="d-block w-100" src="assets/images/3.jpg" alt="3rd Picture of Ed Sheeran">
+                        </div>
+                        <div class="carousel-item">
+                            <img class="d-block w-100" src="assets/images/4.jpg" alt="4th Picture of Ed Sheeran">
+                        </div>
+                        <div class="carousel-item">
+                            <img class="d-block w-100" src="assets/images/5.jpg" alt="5th Picture of Ed Sheeran">
+                        </div>
+                        <div class="carousel-item">
+                            <img class="d-block w-100" src="assets/images/6.jpg" alt="6th Picture of Ed Sheeran">
+                        </div>
+                        <div class="carousel-item">
+                            <img class="d-block w-100" src="assets/images/7.jpg" alt="7th Picture of Ed Sheeran">
+                        </div>
+                        <div class="carousel-item">
+                            <img class="d-block w-100" src="assets/images/8.jpg" alt="8th Picture of Ed Sheeran">
+                        </div>
+                        <!-- below are the back and forward arrow buttons, for changing the photos -->
+                    </div>
+                    <a class="carousel-control-prev" href="#photos" role="button" data-slide="prev">
+                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                        <span class="sr-only">Previous</span>
+                    </a>
+                    <a class="carousel-control-next" href="#photos" role="button" data-slide="next">
+                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                        <span class="sr-only">Next</span>
+                    </a>
                 </div>
             </div>
         </div>
-        <!-- this part below contains photos.  On a large screen shows carousel effect, on smaller shows as -->
-  <div class="row">
-      <div class="col-md-8 photos">
-
-        <div id="PhotoControls" class="carousel slide" data-ride="carousel">
-  <div class="carousel-inner">
-    <div class="carousel-item active">
-      <img class="d-block w-100" src="assets/images/1.jpg" alt="First slide">
-    </div>
-    <div class="carousel-item">
-      <img class="d-block w-100" src="assets/images/2.jpg" alt="Second slide">
-    </div>
-    <div class="carousel-item">
-      <img class="d-block w-100" src="assets/images/3.jpg" alt="Third slide">
-    </div>
-    <div class="carousel-item">
-      <img class="d-block w-100" src="assets/images/4.jpg" alt="Third slide">
-    </div>
-    <div class="carousel-item">
-      <img class="d-block w-100" src="assets/images/5.jpg" alt="Third slide">
-    </div>
-    <div class="carousel-item">
-      <img class="d-block w-100" src="assets/images/6.jpg" alt="Third slide">
-    </div>
-    <div class="carousel-item">
-      <img class="d-block w-100" src="assets/images/7.jpg" alt="Third slide">
-    </div>
-    <div class="carousel-item">
-      <img class="d-block w-100" src="assets/images/8.jpg" alt="Third slide">
-    </div>
-  </div>
-  <a class="carousel-control-prev" href="#PhotoControls" role="button" data-slide="prev">
-    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-    <span class="sr-only">Previous</span>
-  </a>
-  <a class="carousel-control-next" href="#PhotoControls" role="button" data-slide="next">
-    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-    <span class="sr-only">Next</span>
-  </a>
-</div>
-</div>
-</div>
-
-  
     </section>
     <footer>
         <!-- this part contains all the social media links, with a grey top and bottom border -->
