--- a/contact.html
+++ b/contact.html
@@ -63,7 +63,24 @@
                 </div>
                 <!-- main body which is on right side of the subheading, on small screen will take whole page width -->
                 <div class="col-md-10 col-12 bg-white">
-                    <p class="font-black font-text">text here</p>
+                    <div class="row">
+                        <div class="col">
+                            <form>
+                                <input type="text" name="name" id="fullname" class="form-control" placeholder="Name"
+                                    required />
+                                <input type="email" name="email" id="emailaddress" class="form-control"
+                                    placeholder="Email" required />
+                                <textarea rows="5" name="message" id="message" class="form-control"
+                                    placeholder="Your message..." required></textarea>
+                                <!-- boostrap button-->
+                                <div class="form-row text-center">
+                                    <div class="col">
+                                        <button type="submit" class="btn btn-secondary">Send Message</button>
+                                    </div>
+                                </div>
+                            </form>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
