adjusted form padding

--- a/contact.html
+++ b/contact.html
@@ -65,7 +65,7 @@
                 <div class="col-md-10 col-12 bg-white">
                     <div class="row">
                         <div class="col">
-                            <form>
+                            <form id="contact-form">
                                 <input type="text" name="name" id="fullname" class="form-control" placeholder="Name"
                                     required />
                                 <input type="email" name="email" id="emailaddress" class="form-control"
