--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                     <div class="row">
                         <!-- this is the main body text of left column (bottom row) -->
                         <div class="col bg-white">
-                            <p class="font-black font-text">Information about Ed Sheeran goes here</p>
+                            <p class="font-black font-text">Information about Ed Sheeran goes here!</p>
                         </div>
                     </div>
                 </div>
