--- a/music.html
+++ b/music.html
@@ -59,7 +59,7 @@
         <div class="container-fluid no-gutters">
             <div class="row">
                 <div class="col bg-grey">
-                    <h1 class="font-heading font-black">About Ed Sheeran</h1>
+                    <h1 class="font-heading font-black">Music + Video</h1>
                 </div>
             </div>
             <div class="row" id="audio-section">
